对静态资源访问位置的修改

--- a/src/main/webapp/WEB-INF/templates/index.html
+++ b/src/main/webapp/WEB-INF/templates/index.html
@@ -6,12 +6,13 @@
     <meta name="description" content="123" />
     <meta name="author" content="123" />
     <title>学生住宿管理系统</title>
+   
     <!-- BOOTSTRAP CORE STYLE CSS -->
-    <link href="../../css/bootstrap.css" rel="stylesheet" />
+    <link href="/stu_accommodation_sys/css/bootstrap.css" rel="stylesheet" />
     <!-- FONT AWESOME CSS -->
-    <link href="../../css/font-awesome.min.css" rel="stylesheet" />
+    <link href="/stu_accommodation_sys/css/font-awesome.min.css" rel="stylesheet" />
     <!-- CUSTOM STYLE CSS -->
-    <link href="../../css/style.css" rel="stylesheet" />
+    <link href="/stu_accommodation_sys/css/style.css" rel="stylesheet" />
     <!-- Google	Fonts -->
     <link href='http://fonts.googleapis.com/css?family=Nova+Flat' rel='stylesheet' type='text/css' />
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,300' rel='stylesheet' type='text/css' />
@@ -23,12 +24,13 @@
 
                 <div class="col-lg-4 col-md-4 col-sm-4">
                     <a href="index.html">
-                    <img src="../../img/logo.png"  />
+                    <img src="/stu_accommodation_sys/img/logo.png"  />
                         </a>
                 </div>
                 <div class="col-lg-4 col-md-4 col-sm-4 text-center" >
-                     <img src="../../img/top-mouse.png "  class="header-mid" />
-                </div>
+                     <img src="/stu_accommodation_sys/img/top-mouse.png "  class="header-mid" />
+         
+                 </div>
                 <div class="col-lg-4 col-md-4 col-sm-4">
                     <h4><span>姓名:</span>李华硕</h4>
                     <h4><span>学号:</span>1625131015</h4>
@@ -45,14 +47,14 @@
                     <div class="alert alert-info">
                         <div class="media">
                         <div class="pull-left">
-                            <img src="../../img/student.png" class="img-responsive" />
+                            <img src="/stu_accommodation_sys/img/student.png" class="img-responsive" />
                         </div>
                         <div class="media-body">
                             <h3 class="media-heading">我是学生</h3>
                             <p>
                                 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;我是学生，现在想要租房
                             </p>
-                             <a href="/login-student" class="btn btn-primary" target="_blank" >前去登录</a>
+                             <a href="/stu_accommodation_sys/login-student" class="btn btn-primary" target="_blank" >前去登录</a>
                         </div>
                     </div>
                                  
@@ -60,14 +62,14 @@
                    <div class="alert alert-danger">
                         <div class="media">
                         <div class="pull-left">
-                            <img src="../../img/admin.png" class="img-responsive" />
+                            <img src="/stu_accommodation_sys/img/admin.png" class="img-responsive" />
                         </div>
                         <div class="media-body">
                             <h3 class="media-heading">我是房主</h3>
                             <p>
                                 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 我是房主，现在有房子要出租
                             </p>
-                             <a href="/login-landlord" class="btn btn-danger " target="_blank">前去登录</a>
+                             <a href="/stu_accommodation_sys/login-landlord" class="btn btn-danger " target="_blank">前去登录</a>
                         </div>
                     </div>
                        
@@ -85,9 +87,9 @@
         </div>
     </div>
     <!--  Jquery Core Script -->
-    <script src="../../assets/js/jquery-1.10.2.js"></script>
+    <script src="/stu_accommodation_sys/assets/js/jquery-1.10.2.js"></script>
     <!--  Core Bootstrap Script -->
-    <script src="../../assets/js/bootstrap.js"></script>
+    <script src="/stu_accommodation_sys/assets/js/bootstrap.js"></script>
 
 </body>
 </html>
