--- a/src/main/webapp/WEB-INF/templates/landlord-dashboard.html
+++ b/src/main/webapp/WEB-INF/templates/landlord-dashboard.html
@@ -15,11 +15,11 @@
     <![endif]-->
     <title>Support Admin</title>
     <!-- BOOTSTRAP CORE STYLE CSS -->
-    <link href="../../css/bootstrap.css" rel="stylesheet" />
+    <link href="/stu_accommodation_sys/css/bootstrap.css" rel="stylesheet" />
     <!-- FONT AWESOME CSS -->
-    <link href="../../css/font-awesome.min.css" rel="stylesheet" />
+    <link href="/stu_accommodation_sys/css/font-awesome.min.css" rel="stylesheet" />
     <!-- CUSTOM STYLE CSS -->
-    <link href="../../css/style.css" rel="stylesheet" />
+    <link href="/stu_accommodation_sys/css/style.css" rel="stylesheet" />
     <!-- Google	Fonts -->
     <link href='http://fonts.googleapis.com/css?family=Nova+Flat' rel='stylesheet' type='text/css' />
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,300' rel='stylesheet' type='text/css' />
@@ -35,12 +35,12 @@
         <div class="row">
 
             <div class="col-lg-4 col-md-4 col-sm-4">
-                <a href="index.html">
-                    <img src="../../img/logo.png"  />
+                	<a href="/stu_accommodation_sys/">返回首页
+                    <img src="/stu_accommodation_sys/img/logo.png"  />
                 </a>
             </div>
             <div class="col-lg-4 col-md-4 col-sm-4 text-center" >
-                <img src="../../img/top-mouse.png "  class="header-mid" />
+                <img src="/stu_accommodation_sys/img/top-mouse.png "  class="header-mid" />
             </div>
             <div class="col-lg-4 col-md-4 col-sm-4">
                    <h4><span>姓名:</span>李华硕</h4>
@@ -63,7 +63,7 @@
                 </a>
             </div>
             <div class="col-lg-3 col-md-3 col-sm-3  text-center">
-                <a href="/landlord_rent_form">
+                <a href="/stu_accommodation_sys/landlord_rent_form">
                     <div class="alert alert-success">
                         <i class="fa fa-folder-open-o fa-4x"></i>
                         <span class="label label-warning">我要出租</span>
@@ -77,7 +77,7 @@
 
 
             <div class="col-lg-3 col-md-3 col-sm-3  text-center">
-                <a href="/landlord-appointment-info">
+                <a href="/stu_accommodation_sys/landlord-appointment-info">
                     <div class="alert alert-warning">
                         <i class="fa fa-briefcase fa-4x"></i>
                         <span class="label label-success">预约请求</span>
@@ -90,7 +90,7 @@
                 </a>
             </div>
             <div class="col-lg-3 col-md-3 col-sm-3 text-center">
-                <a href="/landlord-meeting-list">
+                <a href="/stu_accommodation_sys/landlord-meeting-list">
                     <div class="alert alert-info">
                         <i class="fa fa-recycle fa-4x"></i>
 
@@ -105,7 +105,7 @@
             </div>
 
             <div class="col-lg-3 col-md-3 col-sm-3 text-center">
-                <a href="/landlord-rent-info">
+                <a href="/stu_accommodation_sys/landlord-rent-info">
                     <div class="alert alert-info">
                         <i class="fa fa-windows fa-4x"></i>
 
@@ -126,9 +126,9 @@
 </section>
 </div>
 <!--  Jquery Core Script -->
-<script src="../../js/jquery-1.10.2.js"></script>
+<script src="/stu_accommodation_sys/js/jquery-1.10.2.js"></script>
 <!--  Core Bootstrap Script -->
-<script src="../../js/bootstrap.js"></script>
+<script src="/stu_accommodation_sys/js/bootstrap.js"></script>
 
 </body>
 </html>
