--- a/src/main/webapp/WEB-INF/templates/login-landlord.html
+++ b/src/main/webapp/WEB-INF/templates/login-landlord.html
@@ -16,11 +16,11 @@
         <![endif]-->
 <title>学生住宿管理系统</title>
 <!-- BOOTSTRAP CORE STYLE CSS -->
-<link href="../../css/bootstrap.css" rel="stylesheet" />
+<link href="/stu_accommodation_sys/css/bootstrap.css" rel="stylesheet" />
 <!-- FONT AWESOME CSS -->
-<link href="../../css/font-awesome.min.css" rel="stylesheet" />
+<link href="/stu_accommodation_sys/css/font-awesome.min.css" rel="stylesheet" />
 <!-- CUSTOM STYLE CSS -->
-<link href="../../css/style.css" rel="stylesheet" />
+<link href="/stu_accommodation_sys/css/style.css" rel="stylesheet" />
 <!-- Google	Fonts -->
 <link href='http://fonts.googleapis.com/css?family=Nova+Flat'
 	rel='stylesheet' type='text/css' />
@@ -39,11 +39,11 @@
 			<div class="row">
 
 				<div class="col-lg-4 col-md-4 col-sm-4">
-					<a href="index.html"> <img src="../../img/logo.png" />
+					<a href="/stu_accommodation_sys/">返回首页<img src="/stu_accommodation_sys/img/logo.png" />
 					</a>
 				</div>
 				<div class="col-lg-4 col-md-4 col-sm-4 text-center">
-					<img src="../../img/top-mouse.png " class="header-mid" />
+					<img src="/stu_accommodation_sys/img/top-mouse.png " class="header-mid" />
 				</div>
 				<div class="col-lg-4 col-md-4 col-sm-4">
 				      <h4><span>姓名:</span>李华硕</h4>
@@ -74,7 +74,7 @@
 
 
 				<div class="col-lg-3 col-md-3 col-sm-3">
-					<img src="../../img/award.png" class="img-responsive" />
+					<img src="/stu_accommodation_sys/img/award.png" class="img-responsive" />
 					<h3>友情提示</h3>
 					<p>特别提醒：请先实名注册才能登录</p>
 				</div>
@@ -99,7 +99,7 @@
 						<div class="form-group">
 							 <input class="btn btn-danger" type="submit" value="登录">
 						</div>
-						<a href="/register-landlord">还没有实名注册？去注册</a>
+						<a href="/stu_accommodation_sys/register-landlord">还没有实名注册？去注册</a>
 					</form>
 				</div>
 
@@ -213,9 +213,9 @@
 
 	<!--</div>-->
 	<!--  Jquery Core Script -->
-	<script src="assets/js/jquery-1.10.2.js"></script>
+	<script src="/stu_accommodation_sys/js/jquery-1.10.2.js"></script>
 	<!--  Core Bootstrap Script -->
-	<script src="assets/js/bootstrap.js"></script>
+	<script src="/stu_accommodation_sys/js/bootstrap.js"></script>
 
 </body>
 </html>
