--- a/src/main/webapp/WEB-INF/templates/login-student.html
+++ b/src/main/webapp/WEB-INF/templates/login-student.html
@@ -15,11 +15,11 @@
         <![endif]-->
     <title>学生住宿管理系统</title>
     <!-- BOOTSTRAP CORE STYLE CSS -->
-    <link href="../../css/bootstrap.css" rel="stylesheet" />
+    <link href="/stu_accommodation_sys/css/bootstrap.css" rel="stylesheet" />
     <!-- FONT AWESOME CSS -->
-    <link href="../../css/font-awesome.min.css" rel="stylesheet" />
+    <link href="/stu_accommodation_sys/css/font-awesome.min.css" rel="stylesheet" />
     <!-- CUSTOM STYLE CSS -->
-    <link href="../../css/style.css" rel="stylesheet" />
+    <link href="/stu_accommodation_sys/css/style.css" rel="stylesheet" />
     <!-- Google	Fonts -->
     <link href='http://fonts.googleapis.com/css?family=Nova+Flat' rel='stylesheet' type='text/css' />
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,300' rel='stylesheet' type='text/css' />
@@ -34,12 +34,12 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-4 col-md-4 col-sm-4">
-                    <a href="index.html">
-                    <img src="../../img/logo.png"  />
+                   <a href="/stu_accommodation_sys/">返回首页 
+                    <img src="/stu_accommodation_sys/img/logo.png"  />
                         </a>
                 </div>
                 <div class="col-lg-4 col-md-4 col-sm-4 text-center" >
-                     <img src="../../img/top-mouse.png "  class="header-mid" />
+                     <img src="/stu_accommodation_sys/img/top-mouse.png "  class="header-mid" />
                 </div>
                 <div class="col-lg-4 col-md-4 col-sm-4">
                      <h4><span>姓名:</span>李华硕</h4>
@@ -54,7 +54,7 @@
             <div class="row">
 
                 <div class="col-lg-4 col-md-4 col-sm-4">
-                    <img src="../../img/up.png" class="img-responsive" />
+                    <img src="/stu_accommodation_sys/img/up.png" class="img-responsive" />
                     &nbsp;&nbsp; <h3>欢迎登陆</h3>
                     <p>
                       &nbsp; &nbsp;
@@ -62,7 +62,7 @@
                     </p>
                 </div>
                 <div class="col-lg-4 col-md-4 col-sm-4">
-                    <img src="../../img/moniter.png" class="img-responsive img-max-width" />
+                    <img src="/stu_accommodation_sys/img/moniter.png" class="img-responsive img-max-width" />
 
                 </div>
                 <div class="col-lg-4 col-md-4 col-sm-4">
@@ -79,7 +79,7 @@
                         <div class="form-group">
                                  <input class="btn btn-danger" type="submit" value="登录">
                         </div>
-                        <a href="/register-student">还没有账号?去注册</a>
+                        <a href="/stu_accommodation_sys/register-student">还没有账号?去注册</a>
 
                     </form>
                 </div>
@@ -135,9 +135,9 @@
 
     <!--</div>-->
     <!--  Jquery Core Script -->
-    <script src=".../../js/jquery-1.10.2.js"></script>
+    <script src="/stu_accommodation_sys/js/jquery-1.10.2.js"></script>
     <!--  Core Bootstrap Script -->
-    <script src="../../js/bootstrap.js"></script>
+    <script src="/stu_accommodation_sys/js/bootstrap.js"></script>
 
 </body>
 </html>
