--- a/src/main/webapp/WEB-INF/templates/student-meeting-list.html
+++ b/src/main/webapp/WEB-INF/templates/student-meeting-list.html
@@ -16,11 +16,11 @@
         <![endif]-->
 <title>Support Admin</title>
 <!-- BOOTSTRAP CORE STYLE CSS -->
-<link href="../../css/bootstrap.css" rel="stylesheet" />
+<link href="/stu_accommodation_sys/css/bootstrap.css" rel="stylesheet" />
 <!-- FONT AWESOME CSS -->
-<link href="../../css/font-awesome.min.css" rel="stylesheet" />
+<link href="/stu_accommodation_sys/css/font-awesome.min.css" rel="stylesheet" />
 <!-- CUSTOM STYLE CSS -->
-<link href="../../css/style.css" rel="stylesheet" />
+<link href="/stu_accommodation_sys/css/style.css" rel="stylesheet" />
 <!-- Google	Fonts -->
 <link href='http://fonts.googleapis.com/css?family=Nova+Flat'
 	rel='stylesheet' type='text/css' />
@@ -56,11 +56,11 @@
 			<div class="row">
 
 				<div class="col-lg-4 col-md-4 col-sm-4">
-					<a href="index.html"> <img src="../../img/logo.png" />
+					<a href="/stu_accommodation_sys/">返回首页  <img src="/stu_accommodation_sys/img/logo.png" />
 					</a>
 				</div>
 				<div class="col-lg-4 col-md-4 col-sm-4 text-center">
-					<img src="../../img/top-mouse.png " class="header-mid" />
+					<img src="/stu_accommodation_sys/img/top-mouse.png " class="header-mid" />
 				</div>
 				<div class="col-lg-4 col-md-4 col-sm-4">
 				      <h4><span>姓名:</span>李华硕</h4>
@@ -213,9 +213,9 @@
 	</section>
 
 	<!--  Jquery Core Script -->
-	<script src="../../js/jquery-1.10.2.js"></script>
+	<script src="/stu_accommodation_sys/js/jquery-1.10.2.js"></script>
 	<!--  Core Bootstrap Script -->
-	<script src="../../js/bootstrap.js"></script>
+	<script src="/stu_accommodation_sys/js/bootstrap.js"></script>
 
 </body>
 </html>
