--- a/src/main/webapp/WEB-INF/templates/landlord_rent_form.html
+++ b/src/main/webapp/WEB-INF/templates/landlord_rent_form.html
@@ -16,11 +16,11 @@
     <![endif]-->
 <title>Support Admin</title>
 <!-- BOOTSTRAP CORE STYLE CSS -->
-<link href="../../css/bootstrap.css" rel="stylesheet" />
+<link href="/stu_accommodation_sys/css/bootstrap.css" rel="stylesheet" />
 <!-- FONT AWESOME CSS -->
-<link href="../../css/font-awesome.min.css" rel="stylesheet" />
+<link href="/stu_accommodation_sys/css/font-awesome.min.css" rel="stylesheet" />
 <!-- CUSTOM STYLE CSS -->
-<link href="../../css/style.css" rel="stylesheet" />
+<link href="/stu_accommodation_sys/css/style.css" rel="stylesheet" />
 <!-- Google	Fonts -->
 <link href='http://fonts.googleapis.com/css?family=Nova+Flat'
 	rel='stylesheet' type='text/css' />
@@ -58,7 +58,7 @@
     	var jason_str = JSON.stringify(house_json);  
     
     	$.ajax({	
-    		url:"/landlord_rent_form",
+    		url:"/stu_accommodation_sys/landlord_rent_form",
     		type:"post",
     		data:jason_str,
     		contentType:"application/json; charset=utf-8", 
@@ -67,7 +67,7 @@
     	    	if(msg.msg='1'){
     	    		var houseCost=$("#info").val();
     	        	alert("付款成功");
-    	        	window.location.href="landlord-dashboard/"+houseCost;	
+    	        	window.location.href="/stu_accommodation_sys/landlord-dashboard/"+houseCost;	
     	    	}else if(msg.msg ='0'){   			 
 		       alert("提交失败");
     	    	}
@@ -87,7 +87,7 @@
     function confirm(){
     	var houseCost=$("#info").val();
     	alert("付款成功");
-    	window.location.href="landlord-dashboard/"+houseCost;	
+    	window.location.href="/stu_accommodation_sys/landlord-dashboard/"+houseCost;	
     }
     
     </script>
@@ -98,11 +98,11 @@
 			<div class="row">
 
 				<div class="col-lg-4 col-md-4 col-sm-4">
-					<a href="index.html"> <img src="../../img/logo.png" />
+					<a href="/stu_accommodation_sys/">返回首页 <img src="/stu_accommodation_sys/img/logo.png" />
 					</a>
 				</div>
 				<div class="col-lg-4 col-md-4 col-sm-4 text-center">
-					<img src="../../img/top-mouse.png " class="header-mid" />
+					<img src="/stu_accommodation_sys/img/top-mouse.png " class="header-mid" />
 				</div>
 				<div class="col-lg-4 col-md-4 col-sm-4">
 				      <h4><span>姓名:</span>李华硕</h4>
@@ -205,9 +205,9 @@
 		</div>
 	</section>
 
-	<script src="../../js/jquery-1.10.2.js"></script>
+	<script src="/stu_accommodation_sys/js/jquery-1.10.2.js"></script>
 	<!--  Core Bootstrap Script -->
-	<script src="../../js/bootstrap.js"></script>
+	<script src="/stu_accommodation_sys/js/bootstrap.js"></script>
 
 </body>
 </html>
