--- a/src/main/webapp/WEB-INF/templates/register-landlord.html
+++ b/src/main/webapp/WEB-INF/templates/register-landlord.html
@@ -15,11 +15,11 @@
     <![endif]-->
     <title>学生住宿管理系统</title>
     <!-- BOOTSTRAP CORE STYLE CSS -->
-    <link href="../../css/bootstrap.css" rel="stylesheet" />
+    <link href="/stu_accommodation_sys/css/bootstrap.css" rel="stylesheet" />
     <!-- FONT AWESOME CSS -->
-    <link href="../../css/font-awesome.min.css" rel="stylesheet" />
+    <link href="/stu_accommodation_sys/css/font-awesome.min.css" rel="stylesheet" />
     <!-- CUSTOM STYLE CSS -->
-    <link href="../../css/style.css" rel="stylesheet" />
+    <link href="/stu_accommodation_sys/css/style.css" rel="stylesheet" />
     <!-- Google	Fonts -->
     <link href='http://fonts.googleapis.com/css?family=Nova+Flat' rel='stylesheet' type='text/css' />
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,300' rel='stylesheet' type='text/css' />
@@ -33,14 +33,13 @@
 <div id="head">
     <div class="container">
         <div class="row">
-
             <div class="col-lg-4 col-md-4 col-sm-4">
-                <a href="index.html">
-                    <img src="../../img/logo.png"  />
+                <a href="/stu_accommodation_sys/">返回首页
+                    <img src="/stu_accommodation_sys/img/logo.png"  />
                 </a>
             </div>
             <div class="col-lg-4 col-md-4 col-sm-4 text-center" >
-                <img src="../../img/top-mouse.png "  class="header-mid" />
+                <img src="/stu_accommodation_sys/img/top-mouse.png "  class="header-mid" />
             </div>
             <div class="col-lg-4 col-md-4 col-sm-4">
                  <h4><span>姓名:</span>李华硕</h4>
@@ -52,39 +51,26 @@
 </div>
 <section >
     <div class="container">
-        <div class="row">
-
-            <!--<div class="col-lg-4 col-md-4 col-sm-4">-->
-            <!--<img src="assets/img/up.png" class="img-responsive" />-->
-            <!--&nbsp;&nbsp; <h3>欢迎登陆</h3>-->
-            <!--<p>-->
-            <!--&nbsp; &nbsp;-->
-            <!--在线选房预约，及时沟通-->
-            <!--</p>-->
-            <!--</div>-->
-            <!--<div class="col-lg-4 col-md-4 col-sm-6 " >-->
-            <!--<img src="assets/img/moniter.png" class="img-responsive img-max-width" />-->
-
-            <!--</div>-->
-
-            <div class="col-lg-4 col-md-4 col-sm-4 col-lg-offset-4">
-                <h3>实名注册</h3>
+                 
+          <div class="col-lg-4 col-md-4 col-sm-4 col-lg-offset-4">
+                <h3>实名注册 </h3>
+                
               <form action="/register-landlord" class="form-horizontal" role="form" 
                th:action="@{/register-landlord}" th:object="${landlord}" method="post" th:method="post" enctype="multipart/form-data"
                 >
+         
+               <label for="landlordUsername" class="col-md-3 col-form-label"
+						th:classappend="${#fields.hasErrors('landlordUsername')}?'badge badge-danger'"></label>
                 <div class="form-group">
                  <input type="text" class="form-control" required="required" placeholder="请输入用户名" id="landlordUsername"
                          th:classappend="${#fields.hasErrors('landlordUsername')}?'text-danger'"  th:field="*{landlordUsername}"  />
-            
                 </div>
                 <div class="form-group">
                      <input type="text" class="form-control" required="required" placeholder="请输入密码" id="landlordPassword"
                          th:classappend="${#fields.hasErrors('landlordPassword')}?'text-danger'"   th:field="*{landlordPassword}"  />
             
                 </div>
-               <!--  <div class="form-group">
-                    <input type="text" class="form-control" required="required" placeholder="请确认密码" />
-                </div> -->
+      
                 <div class="form-group">
                  <input type="text" class="form-control" required="required" placeholder="请输入邮箱" id="landlordEmail"
                          th:classappend="${#fields.hasErrors('landlordEmail')}?'text-danger'"   th:field="*{landlordEmail}"  />
@@ -118,64 +104,17 @@
                         <input class="btn btn-danger" type="submit" value="注册">
                     </div>
             </form>
-        </div>
-            </div>
+        </div> 
+        
 
-    </div>
 
-    </div>
 
 </section>
 
-<!--<div id="footer">-->
-<!--<div class="container">-->
-
-<!--<div class="row">-->
-<!--<div class="col-lg-4 col-md-4 col-sm-4">-->
-<!--<h3>Physical Location</h3>-->
-<!--<p>-->
-<!--<i>Addresss :</i> 125/890 , New York Street,-->
-<!--<br />-->
-<!--United States of America (USA).-->
-<!--<br />-->
-<!--&copy; 2014 yourdomian | by <a href="http://www.binarytheme.com/" style="color:#fff;" target="_blank">binarytheme.com</a>-->
-<!---->
-<!--</p>-->
-<!--</div>-->
-<!--<div class="col-lg-4 col-md-4 col-sm-4">-->
-<!--<h3>Get Quick Help</h3>-->
-<!--<h4><span> Call: </span>+01-4589-987-567</h4>-->
-<!--<h4><span>E-mail: </span>info@domain.com</h4>-->
-<!--<h4><span>Skype:</span> sonasup</h4>-->
-<!--</div>-->
-<!--<div class="col-lg-4 col-md-4 col-sm-4">-->
-
-<!--<h3>Subscribe For Updates</h3>-->
-<!--<form>-->
-
-<!--<div class="form-group">-->
-<!--<input type="text" class="form-control" required="required" placeholder="Your Email" />-->
-<!--</div>-->
-
-
-<!--<div class="form-group">-->
-<!--<button type="submit" class="btn btn-danger">Click To Subscribe</button>-->
-<!--</div>-->
-<!--</form>-->
-<!--</div>-->
-
-
-
-
-<!--</div>-->
-
-<!--</div>-->
-
-<!--</div>-->
 <!--  Jquery Core Script -->
-<script src="../../js/jquery-1.10.2.js"></script>
+<script src="/stu_accommodation_sys/js/jquery-1.10.2.js"></script>
 <!--  Core Bootstrap Script -->
-<script src="../../js/bootstrap.js"></script>
+<script src="/stu_accommodation_sys/js/bootstrap.js"></script>
 
 </body>
 </html>
